--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- Header -->
 	<header class="header">
         <div class="header-logo"><a href="index.html">ohmyfood</a></div>
-        <div class="location"><i class="icon-loc"></i> Paris, Belleville</div>
+        <div class="location"><i class="icon-loc"></i>Paris, Belleville</div>
     </header>
 
     <!-- Partie centrale -->
@@ -38,6 +38,20 @@
 	<footer class="footer">
         <div class="container">
             <div class="footer-logo"><a href="index.html">ohmyfood</a></div>
+            <ul class="footer-links">
+                <li>
+                    <ul class="footer-links-icon">
+                        <li><a href="#"><i class="icon-food"></i>Proposer un restaurant</a></li>
+                        <li><a href="#"><i class="icon-partner"></i>Devenir partenaire</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <ul class="footer-links-general">
+                        <li><a href="#">Mentions légales</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ul>
+                </li>
+            </ul>
         </div>
     </footer>
     
