Ajout de 3 images au commit précédent

--- a/index.html
+++ b/index.html
@@ -17,21 +17,23 @@
 
     <!-- Header -->
 	<header class="header">
-        <div class="header-logo"><a href="index.html">ohmyfood</a></div>
+        <div class="header-top">
+           <div class="header-logo"><a href="index.html"><img src="assets/images/ohmyfood.png" srcset="assets/images/ohmyfood@2x.svg 2x" alt="Ohmyfood" class="img-responsive"></a></div> 
+        </div>
         <div class="location"><i class="fa-solid fa-location-dot"></i>Paris, Belleville</div>
     </header>
 
     <!-- Partie centrale -->
 	<main class="middle">
         <section class="section-top">
-            <div class="container">
+            <div class="container smaller">
                 <h1 class="tt-h1">Réservez le menu qui vous convient</h1>
                 <p class="chapo">Découvrez des restaurants d’exception, sélectionnés par nos soins.</p>
                 <div class="cta"><a href="#" class="btn">Explorer nos restaurants</a></div>
             </div>
         </section>
         <section class="section-steps">
-            <div class="container">
+            <div class="container smaller">
                 <h2 class="tt-h2">Fonctionnement</h2>
                 <div class="steps-list">
                     <div class="step-item step-item-1"><i class="fa-solid fa-mobile-screen-button"></i>Choisissez un restaurant</div>
@@ -41,7 +43,7 @@
             </div>
         </section>
         <section class="section-restaurants">
-            <div class="container">
+            <div class="container smaller">
                 <h2 class="tt-h2">Restaurants</h2>
                 <div class="list-restaurants">
                     <div class="card">
@@ -115,7 +117,7 @@
             <div class="footer-logo"><a href="index.html">ohmyfood</a></div>
             <ul class="footer-links">
                 <li>
-                    <ul class="footer-links-icon">
+                     <ul class="footer-links-icon">
                         <li><a href="#"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a></li>
                         <li><a href="#"><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</a></li>
                     </ul>
@@ -123,7 +125,7 @@
                 <li>
                     <ul class="footer-links-general">
                         <li><a href="#">Mentions légales</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="mailto:ohmyfood@gmail.com">Contact</a></li>
                     </ul>
                 </li>
             </ul>
