--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer">
-
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
@@ -47,10 +46,10 @@
                 <h2 class="tt-h2">Restaurants</h2>
                 <div class="list-restaurants">
                     <div class="card">
-                        <div class="visuel"><a href="#"><img src="assets/images/la-palette-du-gout.jpg" alt="Image d'un plat" class="img-cover"></a></div>
+                        <div class="visuel"><a href="restaurants/restaurant-palette.html"><img src="assets/images/la-palette-du-gout.jpg" alt="Image d'un plat" class="img-cover"></a></div>
                         <div class="texte">
                             <h3 class="tt-h3">La palette du goût</h3>
-                            <p class="lieu">Ménilmontant</p>
+                            <p class="paragraph">Ménilmontant</p>
                         </div>
                         <div class="sticker">Nouveau</div>
                         <label class="fav">
@@ -65,7 +64,7 @@
                         <div class="visuel"><a href="#"><img src="assets/images/la-note-enchantee.jpg" alt="Image d'un plat" class="img-cover"></a></div>
                         <div class="texte">
                             <h3 class="tt-h3">La note enchantée</h3>
-                            <p class="lieu">Charonne</p>
+                            <p class="paragraph">Charonne</p>
                         </div>
                         <div class="sticker">Nouveau</div>
                         <label class="fav">
@@ -80,7 +79,7 @@
                         <div class="visuel"><a href="#"><img src="assets/images/a-la-francaise.jpg" alt="Image d'un plat" class="img-cover"></a></div>
                         <div class="texte">
                             <h3 class="tt-h3">À la française</h3>
-                            <p class="lieu">Cité Rouge</p>
+                            <p class="paragraph">Cité Rouge</p>
                         </div>
                         <div class="sticker">Nouveau</div>
                         <label class="fav">
@@ -95,7 +94,7 @@
                         <div class="visuel"><a href="#"><img src="assets/images/le-delice-des-sens.jpg" alt="Image d'un plat" class="img-cover"></a></div>
                         <div class="texte">
                             <h3 class="tt-h3">Le délice des sens</h3>
-                            <p class="lieu">Folie-Méricourt</p>
+                            <p class="paragraph">Folie-Méricourt</p>
                         </div>
                         <div class="sticker">Nouveau</div>
                         <label class="fav">
