--- a/restaurants/restaurant-palette.html
+++ b/restaurants/restaurant-palette.html
@@ -39,7 +39,7 @@
                     <article class="menu-part">
                         <h2 class="tt-h2">Entrées</h2>
                         <div class="menu-list">
-                            <div class="card">
+                            <div class="card show-1">
                                 <div class="plate">
                                     <h3 class="tt-h3">Fricassée d'escargots</h3>
                                     <p class="paragraph">Au piment d'Espelette</p>
@@ -50,7 +50,7 @@
                                     <span class="check"><i class="fa-solid fa-check"></i></span>
                                 </label>
                             </div>
-                            <div class="card">
+                            <div class="card show-1">
                                 <div class="plate">
                                     <h3 class="tt-h3">Foie gras de canard mi-cuit</h3>
                                     <p class="paragraph">Et ses copeaux de truffe noire</p>
@@ -61,7 +61,7 @@
                                     <span class="check"><i class="fa-solid fa-check"></i></span>
                                 </label>
                             </div>
-                            <div class="card">
+                            <div class="card show-1">
                                 <div class="plate">
                                     <h3 class="tt-h3">Œuf au plat</h3>
                                     <p class="paragraph">Assaisonné à la truffe sur lit de caviar</p>
@@ -77,7 +77,7 @@
                     <article class="menu-part">
                         <h2 class="tt-h2">Plats</h2>
                         <div class="menu-list">
-                            <div class="card">
+                            <div class="card show-2">
                                 <div class="plate">
                                     <h3 class="tt-h3">Filet de bœuf aux herbes</h3>
                                     <p class="paragraph">Accompagné de sa ribambelle de légumes</p>
@@ -88,7 +88,7 @@
                                     <span class="check"><i class="fa-solid fa-check"></i></span>
                                 </label>
                             </div>
-                            <div class="card">
+                            <div class="card show-2">
                                 <div class="plate">
                                     <h3 class="tt-h3">Parmentier de queue de bœuf</h3>
                                     <p class="paragraph">À la truffe noire sur sa purée de panais</p>
@@ -99,7 +99,7 @@
                                     <span class="check"><i class="fa-solid fa-check"></i></span>
                                 </label>
                             </div>
-                            <div class="card">
+                            <div class="card show-2">
                                 <div class="plate">
                                     <h3 class="tt-h3">Filet de turbot</h3>
                                     <p class="paragraph">Aux agrumes</p>
@@ -115,7 +115,7 @@
                     <article class="menu-part">
                         <h2 class="tt-h2">Desserts</h2>
                         <div class="menu-list">
-                            <div class="card">
+                            <div class="card show-3">
                                 <div class="plate">
                                     <h3 class="tt-h3">Paris-Brest</h3>
                                     <p class="paragraph">Revisité</p>
@@ -126,7 +126,7 @@
                                     <span class="check"><i class="fa-solid fa-check"></i></span>
                                 </label>
                             </div>
-                            <div class="card">
+                            <div class="card show-3">
                                 <div class="plate">
                                     <h3 class="tt-h3">Macaron au chocolat d'exception</h3>
                                     <p class="paragraph">Et glace à la vanille de Madagascar</p>
@@ -137,7 +137,7 @@
                                     <span class="check"><i class="fa-solid fa-check"></i></span>
                                 </label>
                             </div>
-                            <div class="card">
+                            <div class="card show-3">
                                 <div class="plate">
                                     <h3 class="tt-h3">Mousse au chocolat</h3>
                                     <p class="paragraph">Au piment d'Espelette et à la truffe noire</p>
