--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         </label>
                     </div>
                     <div class="card">
-                        <div class="visuel"><a href="#"><img src="assets/images/la-note-enchantee.jpg" alt="Image d'un plat" class="img-cover"></a></div>
+                        <div class="visuel"><a href="restaurants/restaurant-note.html"><img src="assets/images/la-note-enchantee.jpg" alt="Image d'un plat" class="img-cover"></a></div>
                         <div class="texte">
                             <h3 class="tt-h3">La note enchantée</h3>
                             <p class="paragraph">Charonne</p>
@@ -76,12 +76,11 @@
                         </label>
                     </div>
                     <div class="card">
-                        <div class="visuel"><a href="#"><img src="assets/images/a-la-francaise.jpg" alt="Image d'un plat" class="img-cover"></a></div>
+                        <div class="visuel"><a href="restaurants/restaurant-francaise.html"><img src="assets/images/a-la-francaise.jpg" alt="Image d'un plat" class="img-cover"></a></div>
                         <div class="texte">
                             <h3 class="tt-h3">À la française</h3>
                             <p class="paragraph">Cité Rouge</p>
                         </div>
-                        <div class="sticker">Nouveau</div>
                         <label class="fav">
                             <input type="checkbox" name="favori">
                             <span class="like">
@@ -91,12 +90,11 @@
                         </label>
                     </div>
                     <div class="card">
-                        <div class="visuel"><a href="#"><img src="assets/images/le-delice-des-sens.jpg" alt="Image d'un plat" class="img-cover"></a></div>
+                        <div class="visuel"><a href="restaurants/restaurant-delice.html"><img src="assets/images/le-delice-des-sens.jpg" alt="Image d'un plat" class="img-cover"></a></div>
                         <div class="texte">
                             <h3 class="tt-h3">Le délice des sens</h3>
                             <p class="paragraph">Folie-Méricourt</p>
                         </div>
-                        <div class="sticker">Nouveau</div>
                         <label class="fav">
                             <input type="checkbox" name="favori">
                             <span class="like">
