--- a/restaurants/restaurant-delice.html
+++ b/restaurants/restaurant-delice.html
@@ -25,11 +25,11 @@
     <!-- Partie centrale -->
 	<main class="middle">
         <section class="section-menu">
-            <div class="visuel"><img src="../assets/images/la-palette-du-gout.jpg" alt="Image d'un plat" class="img-cover"></div>
+            <div class="visuel"><img src="../assets/images/le-delice-des-sens.jpg" alt="Image d'un plat" class="img-cover"></div>
             <div class="box-bg">
                 <div class="container">
                     <div class="menu-top">
-                        <h1 class="tt-h1">La palette du goût</h1>
+                        <h1 class="tt-h1">Le délice des sens</h1>
                         <label class="fav">
                             <input type="checkbox" name="favori">
                             <span class="like">
@@ -44,8 +44,8 @@
                         <div class="menu-list">
                             <div class="card show-1">
                                 <div class="plate">
-                                    <h3 class="tt-h3">Fricassée d'escargots</h3>
-                                    <p class="paragraph">Au piment d'Espelette</p>
+                                    <h3 class="tt-h3">Tartare de thon</h3>
+                                    <p class="paragraph">Assaisonné au yuzu</p>
                                 </div>
                                 <label class="selection" for="entree-1">
                                     <input type="radio" name="select-entree" id="entree-1">
@@ -55,8 +55,8 @@
                             </div>
                             <div class="card show-1">
                                 <div class="plate">
-                                    <h3 class="tt-h3">Foie gras de canard mi-cuit</h3>
-                                    <p class="paragraph">Et ses copeaux de truffe noire</p>
+                                    <h3 class="tt-h3">Bouchée de homard croustillant</h3>
+                                    <p class="paragraph">Et sa farandole de petits légumes</p>
                                 </div>
                                 <label class="selection" for="entree-2">
                                     <input type="radio" name="select-entree" id="entree-2">
@@ -66,12 +66,12 @@
                             </div>
                             <div class="card show-1">
                                 <div class="plate">
-                                    <h3 class="tt-h3">Œuf au plat</h3>
-                                    <p class="paragraph">Assaisonné à la truffe sur lit de caviar</p>
+                                    <h3 class="tt-h3">Poulet rôti aux herbes de Provence</h3>
+                                    <p class="paragraph">Et sa crème de truffe</p>
                                 </div>
                                 <label class="selection" for="entree-3">
                                     <input type="radio" name="select-entree" id="entree-3">
-                                    <span class="price">20€</span>
+                                    <span class="price">40€</span>
                                     <span class="check"><i class="fa-solid fa-check"></i></span>
                                 </label>
                             </div>
@@ -82,8 +82,8 @@
                         <div class="menu-list">
                             <div class="card show-2">
                                 <div class="plate">
-                                    <h3 class="tt-h3">Filet de bœuf aux herbes</h3>
-                                    <p class="paragraph">Accompagné de sa ribambelle de légumes</p>
+                                    <h3 class="tt-h3">Poulet rôti aux herbes de Provence</h3>
+                                    <p class="paragraph">Et sa crème de truffe</p>
                                 </div>
                                 <label class="selection" for="plat-1">
                                     <input type="radio" name="select-plat" id="plat-1">
@@ -93,8 +93,8 @@
                             </div>
                             <div class="card show-2">
                                 <div class="plate">
-                                    <h3 class="tt-h3">Parmentier de queue de bœuf</h3>
-                                    <p class="paragraph">À la truffe noire sur sa purée de panais</p>
+                                    <h3 class="tt-h3">Langouste rôtie</h3>
+                                    <p class="paragraph">Et ses légumes de saison</p>
                                 </div>
                                 <label class="selection" for="plat-2">
                                     <input type="radio" name="select-plat" id="plat-2">
@@ -104,8 +104,8 @@
                             </div>
                             <div class="card show-2">
                                 <div class="plate">
-                                    <h3 class="tt-h3">Filet de turbot</h3>
-                                    <p class="paragraph">Aux agrumes</p>
+                                    <h3 class="tt-h3">Côte de bœuf Angus</h3>
+                                    <p class="paragraph">Et sa purée de panais</p>
                                 </div>
                                 <label class="selection" for="plat-3">
                                     <input type="radio" name="select-plat" id="plat-3">
@@ -120,8 +120,8 @@
                         <div class="menu-list">
                             <div class="card show-3">
                                 <div class="plate">
-                                    <h3 class="tt-h3">Paris-Brest</h3>
-                                    <p class="paragraph">Revisité</p>
+                                    <h3 class="tt-h3">Farandole de desserts</h3>
+                                    <p class="paragraph">Du chef</p>
                                 </div>
                                 <label class="selection" for="dessert-1">
                                     <input type="radio" name="select-dessert" id="dessert-1">
@@ -131,8 +131,8 @@
                             </div>
                             <div class="card show-3">
                                 <div class="plate">
-                                    <h3 class="tt-h3">Macaron au chocolat d'exception</h3>
-                                    <p class="paragraph">Et glace à la vanille de Madagascar</p>
+                                    <h3 class="tt-h3">Crème brulée</h3>
+                                    <p class="paragraph">Revisitée</p>
                                 </div>
                                 <label class="selection" for="dessert-2">
                                     <input type="radio" name="select-dessert" id="dessert-2">
@@ -142,8 +142,8 @@
                             </div>
                             <div class="card show-3">
                                 <div class="plate">
-                                    <h3 class="tt-h3">Mousse au chocolat</h3>
-                                    <p class="paragraph">Au piment d'Espelette et à la truffe noire</p>
+                                    <h3 class="tt-h3">Tiramisu</h3>
+                                    <p class="paragraph">À la noisette</p>
                                 </div>
                                 <label class="selection" for="dessert-3">
                                     <input type="radio" name="select-dessert" id="dessert-3">
