--- a/restaurants/restaurant-note.html
+++ b/restaurants/restaurant-note.html
@@ -25,11 +25,11 @@
     <!-- Partie centrale -->
 	<main class="middle">
         <section class="section-menu">
-            <div class="visuel"><img src="../assets/images/la-palette-du-gout.jpg" alt="Image d'un plat" class="img-cover"></div>
+            <div class="visuel"><img src="../assets/images/la-note-enchantee.jpg" alt="Image d'un plat" class="img-cover"></div>
             <div class="box-bg">
                 <div class="container">
                     <div class="menu-top">
-                        <h1 class="tt-h1">La palette du goût</h1>
+                        <h1 class="tt-h1">La note enchantée</h1>
                         <label class="fav">
                             <input type="checkbox" name="favori">
                             <span class="like">
@@ -44,8 +44,8 @@
                         <div class="menu-list">
                             <div class="card show-1">
                                 <div class="plate">
-                                    <h3 class="tt-h3">Fricassée d'escargots</h3>
-                                    <p class="paragraph">Au piment d'Espelette</p>
+                                    <h3 class="tt-h3">Ravioles de foie gras</h3>
+                                    <p class="paragraph">Accompagnées de leur crème à la truffe</p>
                                 </div>
                                 <label class="selection" for="entree-1">
                                     <input type="radio" name="select-entree" id="entree-1">
@@ -55,8 +55,8 @@
                             </div>
                             <div class="card show-1">
                                 <div class="plate">
-                                    <h3 class="tt-h3">Foie gras de canard mi-cuit</h3>
-                                    <p class="paragraph">Et ses copeaux de truffe noire</p>
+                                    <h3 class="tt-h3">Caviar osciètre</h3>
+                                    <p class="paragraph">Sur blini à la farine de blé noir</p>
                                 </div>
                                 <label class="selection" for="entree-2">
                                     <input type="radio" name="select-entree" id="entree-2">
@@ -66,12 +66,23 @@
                             </div>
                             <div class="card show-1">
                                 <div class="plate">
-                                    <h3 class="tt-h3">Œuf au plat</h3>
-                                    <p class="paragraph">Assaisonné à la truffe sur lit de caviar</p>
+                                    <h3 class="tt-h3">Homard et espuma de potiron</h3>
+                                    <p class="paragraph">Marinés aux zestes d'orange</p>
                                 </div>
                                 <label class="selection" for="entree-3">
                                     <input type="radio" name="select-entree" id="entree-3">
                                     <span class="price">20€</span>
+                                    <span class="check"><i class="fa-solid fa-check"></i></span>
+                                </label>
+                            </div>
+                            <div class="card show-1">
+                                <div class="plate">
+                                    <h3 class="tt-h3">Foie gras de canard cuit entier</h3>
+                                    <p class="paragraph">Confiture de figue et pain toasté</p>
+                                </div>
+                                <label class="selection" for="entree-3">
+                                    <input type="radio" name="select-entree" id="entree-3">
+                                    <span class="price">35€</span>
                                     <span class="check"><i class="fa-solid fa-check"></i></span>
                                 </label>
                             </div>
@@ -82,8 +93,8 @@
                         <div class="menu-list">
                             <div class="card show-2">
                                 <div class="plate">
-                                    <h3 class="tt-h3">Filet de bœuf aux herbes</h3>
-                                    <p class="paragraph">Accompagné de sa ribambelle de légumes</p>
+                                    <h3 class="tt-h3">Noix de coquilles Saint-Jacques</h3>
+                                    <p class="paragraph">Sur lit de purée de céleri-rave</p>
                                 </div>
                                 <label class="selection" for="plat-1">
                                     <input type="radio" name="select-plat" id="plat-1">
@@ -93,8 +104,8 @@
                             </div>
                             <div class="card show-2">
                                 <div class="plate">
-                                    <h3 class="tt-h3">Parmentier de queue de bœuf</h3>
-                                    <p class="paragraph">À la truffe noire sur sa purée de panais</p>
+                                    <h3 class="tt-h3">Langoustine poêlée</h3>
+                                    <p class="paragraph">Purée de patate douce</p>
                                 </div>
                                 <label class="selection" for="plat-2">
                                     <input type="radio" name="select-plat" id="plat-2">
@@ -104,8 +115,8 @@
                             </div>
                             <div class="card show-2">
                                 <div class="plate">
-                                    <h3 class="tt-h3">Filet de turbot</h3>
-                                    <p class="paragraph">Aux agrumes</p>
+                                    <h3 class="tt-h3">Mijoté de queue de bœuf</h3>
+                                    <p class="paragraph">Et riz sauvage aux zestes de citron</p>
                                 </div>
                                 <label class="selection" for="plat-3">
                                     <input type="radio" name="select-plat" id="plat-3">
@@ -120,8 +131,8 @@
                         <div class="menu-list">
                             <div class="card show-3">
                                 <div class="plate">
-                                    <h3 class="tt-h3">Paris-Brest</h3>
-                                    <p class="paragraph">Revisité</p>
+                                    <h3 class="tt-h3">Macaron noisette et chocolat</h3>
+                                    <p class="paragraph">Glace au caramel brun et sel de Guérande</p>
                                 </div>
                                 <label class="selection" for="dessert-1">
                                     <input type="radio" name="select-dessert" id="dessert-1">
@@ -131,8 +142,8 @@
                             </div>
                             <div class="card show-3">
                                 <div class="plate">
-                                    <h3 class="tt-h3">Macaron au chocolat d'exception</h3>
-                                    <p class="paragraph">Et glace à la vanille de Madagascar</p>
+                                    <h3 class="tt-h3">Baba au rhum revisité</h3>
+                                    <p class="paragraph">Avec son coulis de citron</p>
                                 </div>
                                 <label class="selection" for="dessert-2">
                                     <input type="radio" name="select-dessert" id="dessert-2">
@@ -142,8 +153,8 @@
                             </div>
                             <div class="card show-3">
                                 <div class="plate">
-                                    <h3 class="tt-h3">Mousse au chocolat</h3>
-                                    <p class="paragraph">Au piment d'Espelette et à la truffe noire</p>
+                                    <h3 class="tt-h3">Tarte au citron meringuée</h3>
+                                    <p class="paragraph">Déstructurée</p>
                                 </div>
                                 <label class="selection" for="dessert-3">
                                     <input type="radio" name="select-dessert" id="dessert-3">
