Ajout du loader sur la homepage et calages divers

--- a/index.html
+++ b/index.html
@@ -24,6 +24,16 @@
 
     <!-- Partie centrale -->
 	<main class="middle">
+        <div class="overlay">
+            <div class="loader">
+                <div class="dot"></div>
+                <div class="dot"></div>
+                <div class="dot"></div>
+                <div class="dot"></div>
+                <div class="dot"></div>
+                <div class="dot"></div>
+            </div>
+        </div>
         <section class="section-top">
             <div class="container smaller">
                 <h1 class="tt-h1">Réservez le menu qui vous convient</h1>
