Blocage du scroll sous le loader sur la homepage / hover sur les 3 étapes de fonctionnement + ancre vers la liste des restaurants

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
-<body>
+<body class="pg-index">
 
     <!-- Header -->
 	<header class="header">
@@ -45,13 +45,13 @@
             <div class="container smaller">
                 <h2 class="tt-h2">Fonctionnement</h2>
                 <div class="steps-list">
-                    <div class="step-item step-item-1"><i class="fa-solid fa-mobile-screen-button"></i>Choisissez un restaurant</div>
-                    <div class="step-item step-item-2"><i class="fa-solid fa-list-ul"></i>Composez votre menu</div>
-                    <div class="step-item step-item-3"><i class="fa-solid fa-store"></i>Dégustez au restaurant</div>
+                    <a href="#choose-resto" class="step-item step-item-1"><i class="fa-solid fa-mobile-screen-button"></i>Choisissez un restaurant</a>
+                    <a href="#choose-resto" class="step-item step-item-2"><i class="fa-solid fa-list-ul"></i>Composez votre menu</a>
+                    <a href="#choose-resto" class="step-item step-item-3"><i class="fa-solid fa-store"></i>Dégustez au restaurant</a>
                 </div>
             </div>
         </section>
-        <section class="section-restaurants">
+        <section class="section-restaurants" id="choose-resto">
             <div class="container smaller">
                 <h2 class="tt-h2">Restaurants</h2>
                 <div class="list-restaurants">
