Ajout d'une ancre sur le bouton 'Explorer' vers la liste des restaurants sur la homepage

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="container smaller">
                 <h1 class="tt-h1">Réservez le menu qui vous convient</h1>
                 <p class="chapo">Découvrez des restaurants d’exception, sélectionnés par nos soins.</p>
-                <div class="cta"><a href="#" class="btn">Explorer nos restaurants</a></div>
+                <div class="cta"><a href="#choose-resto" class="btn">Explorer nos restaurants</a></div>
             </div>
         </section>
         <section class="section-steps">
