--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="header-top">
            <div class="header-logo"><a href="index.html"><img src="assets/images/ohmyfood.png" srcset="assets/images/ohmyfood@2x.svg 2x" alt="Ohmyfood" class="img-responsive"></a></div> 
         </div>
-        <div class="location"><i class="fa-solid fa-location-dot"></i>Paris, Belleville</div>
+        <div class="location"><i class="fa-solid fa-location-dot"></i>Paris, Belleville test</div>
     </header>
 
     <!-- Partie centrale -->
