--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
         <section class="section-top">
             <div class="container smaller">
-                <h1 class="tt-h1">Réservez le menu qui vous convient</h1>
+                <h1 class="tt-h1">Réservez le menu qui vous convient super bien</h1>
                 <p class="chapo">Découvrez des restaurants d’exception, sélectionnés par nos soins.</p>
                 <div class="cta"><a href="#choose-resto" class="btn">Explorer nos restaurants</a></div>
             </div>
